--- a/src/main/resources/i18n/messages_es.properties
+++ b/src/main/resources/i18n/messages_es.properties
@@ -6,7 +6,7 @@ error.message=Mensaje:
 
 # Activation e-mail
 email.activation.title=Activación de TEGA: {0}
-email.activation.greeting=Estimado {0}
+email.activation.greeting=Estimado/a {0}
 email.activation.text1=Su cuenta de TEGA: {0} ha sido creada, por favor, haga clic en el enlace de abajo para activarla:
 email.activation.text2=Saludos,
 email.signature=Equipo de {0}.
@@ -16,7 +16,7 @@ email.creation.text1=Su cuenta de TEGA: {0} ha sido creada, por favor, haga clic
 
 # Reset e-mail
 email.reset.title=Reinicio de contraseña de TEGA: {0}
-email.reset.greeting=Estimado {0}
+email.reset.greeting=Estimado/a {0}
 email.reset.text1=Se ha solicitado el reinicio de contraseña para su cuenta de proyecto, por favor, haga clic en el enlace de abajo para reiniciarla:
 email.reset.text2=Saludos,
 
